# fourcipp

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: check_code.yaml  publish_pypi.yaml  run_testsuite.yaml  tag_version.yaml  update_4C_metadata_schema_file.yaml
src/fourc_meta/: input_specs.py
src/fourcipp/: __init__.py  config.yaml  constants.py  fourc_input.py  main.py  reader.py
src/fourcipp/config/: 4C_metadata.yaml  4C_schema.json  config.yaml
src/fourcipp/geometry/: elements.py  legacy_4C_metadata.yaml
src/fourcipp/legacy_io/: __init__.py  domain.py  element.py  inline_dat.py  knotvectors.py  node.py  node_topology.py  particle.py
src/fourcipp/updater/: update_utils.py
src/fourcipp/utils/: cli.py  configuration.py  converter.py  dict_utils.py  make_documentation.py  make_documentation_new.py  metadata.py  not_set.py  type_hinting.py  typing.py  validation.py  yaml_io.py
tests/fourcipp/: test_fourc_input.py  test_main.py  test_readme_quickstart_example.py
tests/fourcipp/legacy_io/: test_domain.py  test_element.py  test_inline_dat.py  test_knotvectors.py  test_legacy_io.py  test_node.py  test_node_topology.py  test_particle.py  utils.py
tests/fourcipp/utils/: test_configuration.py  test_converter.py  test_dict_utils.py  test_metadata.py
